# Overseer

./: .env.example  .gitignore  .replit  INSTALLATION.md  LICENSE  MODEL_DOWNLOAD_SUMMARY.md  README.md  demo_main.py  install.py  install.sh  pyproject.toml  requirements.txt
backend/: COMPREHENSIVE_SUMMARY.md  README.md  demo_file_selector.py  install_cli.sh  main.py  migrate_to_modern_packaging.py  pyproject.toml  requirements.txt  setup.py  test_all_tools.py
backend/api/: README.md  __init__.py  main.py  requirements.txt  routes.py  test_api.py
backend/cli/: FEATURES_DOCUMENTATION.md  MODEL_MANAGEMENT.md  QUICK_REFERENCE.md  README.md  __init__.py  advanced_settings.py  model_cli.py  model_manager.py  model_requirements.txt  overseer_cli.py  settings_manager.py
backend/cli/core/: core_logic.py  test_core_logic.py
backend/cli/db/: filesystem_db.py  filesystem_info.db  system_monitoring_db.py  test_filesystem_db.py  (+2 more)
backend/core/: README.md  cli.py  db_init.py  gemma_engine.py
backend/db/: README.md  advanced_analytics.db  command_templates.db  custom_alert_rules.db  database_config.py  file_index.db  memory_analytics.db  ml_integration.db  performance_baselines.db  predictive_analytics.db  system_alerts.db  system_knowledge.db  system_metrics.db  test_database_consolidation.py  tool_analytics.db  tool_database.db  tools_knowledge.db  training_user_interactions.db  unified_system.db  user_interactions.db
backend/interfaces/: README.md
backend/knowledge/: README.md
backend/modules/: README.md
backend/tests/: test_cli.py  test_db_init.py
demo/: demo.py  (+6 more)
(+220 files in other folders)
